kubernetes/apps/networking/nas/ingress/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: networking
subsets:
  - addresses:
      - ip: ${NAS_SERVICE_ADDR}
    ports:
      - name: https
        port: 5001
        protocol: TCP
