kubernetes/apps/networking/nas/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_ssl_server_name on;
       proxy_ssl_name nas.${SECRET_DOMAIN};
    hajimari.io/enable: "true"
    hajimari.io/icon: "nas"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nas.${SECRET_DOMAIN}
  rules:
    - host: nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nas
                port:
                  number: 5001
